--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SubmitActivity"></activity>
+        <activity android:name=".DetailsActivity"></activity>
+        <activity android:name=".SigninActivity" />
+        <activity android:name=".SubmitActivity" />
         <activity android:name=".communicationActivity" />
         <activity android:name=".RegisterEmployeesActivity" />
         <activity android:name=".RegisterEmployerActivity" />
