--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetailsActivity"></activity>
+        <activity android:name=".SubmitActivity2"></activity>
+        <activity android:name=".DetailsActivity" />
         <activity android:name=".SigninActivity" />
         <activity android:name=".SubmitActivity" />
         <activity android:name=".communicationActivity" />
